# advent-of-code-2020

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
aoc20/: p01.py  p02.py  p03.py  p04.py  p05.py  p06.py  p07.py  p08.py  p09.py  p10.py  p11.py  p12.py  p13.py  p14.py  p15.py  p16.py  p17.py  p18.py  p19.py  p20.py  p21.py  p22.py  p23.py  p24.py  p25.py
tests/: test_p01.py  test_p02.py  test_p03.py  test_p04.py  test_p05.py  test_p06.py  test_p07.py  test_p08.py  test_p09.py  test_p10.py  test_p11.py  test_p12.py  test_p13.py  test_p14.py  test_p15.py  test_p16.py  test_p17.py  test_p18.py  test_p19.py  test_p20.py  test_p21.py  test_p22.py  test_p23.py  test_p24.py  test_p25.py
